# TheTradingMachine

./: .gitignore  AMD.csv  CMakeLists.txt  IBInterface.cpp  IBInterface.h  Main.cpp  README.md  StdAfx.h  Stock.cpp  Stock.h  TheTradingMachine.VC.db  TheTradingMachine.cpp  TheTradingMachine.h  TheTradingMachine.sln  TheTradingMachine.vcxproj  TheTradingMachine.vcxproj.filters  build.bat  sample.txt
BaseAlgorithm/: BaseAlgorithm.cpp  BaseAlgorithm.h  BaseAlgorithm.vcxproj  BaseAlgorithm.vcxproj.filters  LocalBroker.cpp  LocalBroker.h  PlotData.h  Position.h  TickDataSource.cpp  TickDataSource.h
BaseModules/: BaseModules.sln
Debug/: vc140.idb
GUI/: CandleMaker.cpp  CandleMaker.h  TheTradingMachineApplication.pro  annotation.cpp  annotation.h  annotationplot.cpp  annotationplot.h  baseplot.cpp  baseplot.h  basicplot.cpp  basicplot.h  candleplot.cpp  candleplot.h  candlevolumeplot.cpp  candlevolumeplot.h  indicatordialog.cpp  indicatordialog.h  indicatordialog.ui  indicatorgraph.h  indicatorincludes.h  indicatorplot.h  iplot.h  playdialog.cpp  playdialog.h  playdialog.ui  qcustomplot.h  thetradingmachinemainwindow.cpp  thetradingmachinemainwindow.h  thetradingmachinemainwindow.ui  thetradingmachinetab.cpp  thetradingmachinetab.h  volumeplot.cpp  volumeplot.h
IBInterface/: IBInterface.cpp  IBInterface.h  IBInterface.vcxproj  IBInterface.vcxproj.filters  StdAfx.h
IBInterfaceClient/: IBInterfaceClient.cpp  IBInterfaceClient.h  IBInterfaceClient.vcxproj  IBInterfaceClient.vcxproj.filters
Indicators/: Indicators.sln
SampleAlgorithms/: Algorithms.sln
(+196 files in other folders)
